CHANGE HISTORY
--------------------------------

1.2.0   11/16/09

Improved axis scaling. The automatic axis scaling routine
now does a better job for ranges less than 1.0. The user can also
hardwire in min and max values, as well as specify a minimum increment, through
parameter 'yscale' in section [Images] in the configuration file.

Rain year is now parameterized in file templates/year.tmpl (instead of 
being hardwired in).

Now does LOOP caching by default.

When doing backfilling to the stats database, configure now creates the stats
database if it doesn't already exist.

setup.py now more robust to upgrading the FTP and Wunderground sections


1.1.0   11/14/09

Added the ability to cache LOOP data. This can dramatically reduce the
number of writes to the stats database, reducing wear on solid-state
disk stores.

Introduced module weewx.mainloop. Introduced class weewx.mainloop.MainLoop
This class offers many opportunities to customize weewx through subclassing,
then overriding an appropriate member function. 

Refactored module weewx.wunderground so it more closely resembles the
(better) logic in wunderfixer.

setup.py no longer installs a daemon startup script to /etc/init.d. It must
now be done by hand.

setup.py now uses the 'home' value in setup.cfg to set WEEWX_ROOT in 
weewx.conf and in the daemon start up scripts

Now uses FTP passive mode by default.

1.0.1   11/09/09

Fixed bug that prevented backfilling the stats database after modifying
the main archive.

1.0.0   10/26/09

Took the module weewx.factory back out, as it was too complicated and
hard to understand.

Added support for generating NOAA monthly and yearly
reports. Completely rewrote the genfiles.py module, to allow easy
subclassing and specialization.

Completely rewrote the stats.py module. All aggregate quantities
are now calculated dynamically.

Labels for HTML generation are now held separately from labels used
for image generation. This allows entities such as '&deg;' to be used